// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectStatus state=Error 1`] = `
<DocumentFragment>
  <div
    class="ObjectStatus-objectStatus ObjectStatus-error"
  >
    <span
      class="ObjectStatus-icon"
    >
      <ui5-icon
        design="Default"
        name="error"
        ui5-icon=""
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`ObjectStatus state=Indication01 1`] = `
<DocumentFragment>
  <div
    class="ObjectStatus-objectStatus ObjectStatus-indication01"
  />
</DocumentFragment>
`;

exports[`ObjectStatus state=Indication02 1`] = `
<DocumentFragment>
  <div
    class="ObjectStatus-objectStatus ObjectStatus-indication02"
  />
</DocumentFragment>
`;

exports[`ObjectStatus state=Indication03 1`] = `
<DocumentFragment>
  <div
    class="ObjectStatus-objectStatus ObjectStatus-indication03"
  />
</DocumentFragment>
`;

exports[`ObjectStatus state=Indication04 1`] = `
<DocumentFragment>
  <div
    class="ObjectStatus-objectStatus ObjectStatus-indication04"
  />
</DocumentFragment>
`;

exports[`ObjectStatus state=Indication05 1`] = `
<DocumentFragment>
  <div
    class="ObjectStatus-objectStatus ObjectStatus-indication05"
  />
</DocumentFragment>
`;

exports[`ObjectStatus state=Indication06 1`] = `
<DocumentFragment>
  <div
    class="ObjectStatus-objectStatus ObjectStatus-indication06"
  />
</DocumentFragment>
`;

exports[`ObjectStatus state=Indication07 1`] = `
<DocumentFragment>
  <div
    class="ObjectStatus-objectStatus ObjectStatus-indication07"
  />
</DocumentFragment>
`;

exports[`ObjectStatus state=Indication08 1`] = `
<DocumentFragment>
  <div
    class="ObjectStatus-objectStatus ObjectStatus-indication08"
  />
</DocumentFragment>
`;

exports[`ObjectStatus state=Information 1`] = `
<DocumentFragment>
  <div
    class="ObjectStatus-objectStatus ObjectStatus-information"
  >
    <span
      class="ObjectStatus-icon"
    >
      <ui5-icon
        design="Default"
        name="information"
        ui5-icon=""
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`ObjectStatus state=None 1`] = `
<DocumentFragment>
  <div
    class="ObjectStatus-objectStatus ObjectStatus-none"
  />
</DocumentFragment>
`;

exports[`ObjectStatus state=Success 1`] = `
<DocumentFragment>
  <div
    class="ObjectStatus-objectStatus ObjectStatus-success"
  >
    <span
      class="ObjectStatus-icon"
    >
      <ui5-icon
        design="Default"
        name="sys-enter-2"
        ui5-icon=""
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`ObjectStatus state=Warning 1`] = `
<DocumentFragment>
  <div
    class="ObjectStatus-objectStatus ObjectStatus-warning"
  >
    <span
      class="ObjectStatus-icon"
    >
      <ui5-icon
        design="Default"
        name="alert"
        ui5-icon=""
      />
    </span>
  </div>
</DocumentFragment>
`;
